fix: LYS success page overflows

--- a/plugins/woocommerce-admin/client/launch-your-store/hub/styles.scss
+++ b/plugins/woocommerce-admin/client/launch-your-store/hub/styles.scss
@@ -2,6 +2,10 @@
 	min-width: 600px;
 	overflow: auto;
 
+	&.woocommerce-admin-page.woocommerce_page_wc-admin #wpbody-content {
+		overflow-x: clip !important; // Overriding inherit !important from plugins/woocommerce-admin/client/homescreen/style.scss as it's causing a horizontal scrollbar in LYS Congrats on small screens
+	}
+
 	.woocommerce-layout__primary {
 		margin: 0;
 		padding: 0;
@@ -14,6 +18,7 @@
 			display: flex;
 			flex-direction: row;
 			background-color: #fcfcfc;
+			min-height: 100vh;
 
 			.customize-your-store-edit-site-resizable-frame__inner-content {
 				height: 100%;
